@@ -1233,6 +1233,18 @@ This command is a weak form of DESTROY, allowing only items and mobs to be \
 destroyed.  Rejuvinating mobs will still rejuvinate when purge is used, unlike \
 destroy.
 	
+QUESTS=\
+Command : QUESTS\n\r\
+Usage   : QUESTS (WON/[QUEST NAME]/[PLAYER NAME])\n\r\
+Example : quests\n\r\
+Example : quests won\n\r\
+Example : quests bob\n\r\
+Short(s): \n\r\
+This command is for listing quests one is either involved in, or \
+were involved in. The admin version of this command allows a player \
+name to be specified when retreiving information.  Enter HELP QUESTS \
+for more information on the mundane use of the command.
+
 SNOOP=\
 Command : SNOOP\n\r\
 Usage   : SNOOP [TARGET NAME]\n\r\
